# CodeArena

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  SPEC.md  docker-compose.yml  fly.toml
admin/: README.md  angular.json  package-lock.json  package.json
admin/src/: styles.css
admin/src/app/: app.css  app.routes.ts  app.ts
admin/src/app/core/: auth.guard.ts  auth.interceptor.ts  auth.service.ts
admin/src/app/pages/login/: login.component.css  login.component.ts
admin/src/app/pages/problem-edit/: problem-edit.component.css  problem-edit.component.ts
admin/src/app/pages/problems/: problems.component.css  problems.component.ts
admin/src/app/pages/submissions/: submissions.component.css  submissions.component.ts
admin/src/app/pages/users/: users.component.css  users.component.ts
admin/src/environments/: environment.prod.ts
api/: Dockerfile  go.mod  go.sum
api/cmd/server/: main.go
api/internal/auth/: jwt.go  jwt_test.go
api/internal/server/: admin_handlers.go  auth_handlers.go  hub.go  hub_test.go  inmemory.go  inmemory_test.go  judge.go  judge_test.go  migrations.go  mock.go  server.go  server_test.go  store.go  store_interface.go
db/migrations/: 0001_init.sql  0002_users.sql  0003_submissions_user.sql  0004_admin_role.sql  0005_test_cases.sql
judge/: CMakeLists.txt
judge/src/: main.cpp
web/: index.html  package-lock.json  package.json
web/src/: App.jsx  index.css
web/src/pages/: Login.jsx  Problems.jsx  Profile.jsx  Register.jsx
web/src/store/: auth.js
